[gd_scene load_steps=3 format=3 uid="uid://be55por1d7cgx"]

[ext_resource type="Script" path="res://scripts/item_attribute_setting.gd" id="1_dhyxc"]
[ext_resource type="Texture2D" uid="uid://cqlyj4abmtc1i" path="res://icons/FileAccess.svg" id="2_leorw"]

[node name="Attribute" type="PanelContainer"]
script = ExtResource("1_dhyxc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Name" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Name"]
layout_mode = 2
text = "Name:"

[node name="NameTextEdit" type="TextEdit" parent="VBoxContainer/Name"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/line_spacing = -1
scroll_fit_content_height = true

[node name="ApplyNameButton" type="Button" parent="VBoxContainer/Name"]
layout_mode = 2
icon = ExtResource("2_leorw")

[node name="Value" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Value"]
layout_mode = 2
text = "Value:"

[node name="ValueTextEdit" type="TextEdit" parent="VBoxContainer/Value"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/line_spacing = -1
scroll_fit_content_height = true

[node name="Description" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Description"]
layout_mode = 2
text = "Description:"

[node name="DescriptionTextEdit" type="TextEdit" parent="VBoxContainer/Description"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/line_spacing = -1
scroll_fit_content_height = true

[node name="Show" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Show"]
layout_mode = 2
size_flags_horizontal = 3
text = "Show in tooltip:"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/Show"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DuplicateButton" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Duplicate"

[node name="DeleteButton" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete"

[connection signal="text_changed" from="VBoxContainer/Name/NameTextEdit" to="." method="_on_name_text_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/Name/ApplyNameButton" to="." method="_on_apply_name_button_pressed"]
[connection signal="text_changed" from="VBoxContainer/Value/ValueTextEdit" to="." method="_on_value_text_edit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/Description/DescriptionTextEdit" to="." method="_on_description_text_edit_text_changed"]
[connection signal="toggled" from="VBoxContainer/Show/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="VBoxContainer/Buttons/DuplicateButton" to="." method="_on_duplicate_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/DeleteButton" to="." method="_on_delete_button_pressed"]
